--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	</center>
 
 	<center>
-		<p><img src="https://cutewallpaper.org/28/dedsec-gif-wallpaper/best-5348b-dedsec-c8ee5-gifs-662b6-gfycat.gif" width="412" height="411" /></p>
+		<p><img src="https://24.media.tumblr.com/tumblr_mcf022pxOF1qm2eluo1_500.gif" width="412" height="411" /></p>
 	</center>
 
 	<marquee direction="up">
