--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	</center>
 
 	<center>
-		<p><img src="https://24.media.tumblr.com/tumblr_mcf022pxOF1qm2eluo1_500.gif" width="412" height="411" /></p>
+		<p><img src="https://i.pinimg.com/originals/4c/01/bc/4c01bc46119eafd6ad52c72e3f6baa5a.gif" width="412" height="411" /></p>
 	</center>
 
 	<marquee direction="up">
